--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
 
 
 <div class="container">
+<div class="wgrid12">
+
+<ul class="list_horizontal align_right">
+<li>
+<a href="https://github.com/estefanions/resetcss" target="_blank">
+<img src="image/github_logo.png" width="20" alt="github"/>
+</a>
+</li>
+    <li>
+ <div class="share-opt">
+<a class="twitter-share-button"
+               href="https://twitter.com/share"
+               data-count="none"
+               data-size="large"
+               data-text="reset.css: HTML5 to CSS resets"
+               data-via="estefanions"
+               data-related="estefanions">Tweet</a>
+
+          </div>
+
+</li>
+
+
+<li>
+ <div class="share-opt">
+            <a class="twitter-follow-button"
+               href="https://twitter.com/estefanions"
+               data-show-count="false"
+               data-size="large">@estefanions</a>
+          </div>
+
+</li>
+
+</ul>    
+
+</div>
+
+
+<div class="wgrid12">
+
 <h1>Reset CSS</h1>
 <script src="https://gist.github.com/estefanions/ddeb16227221a74e53fb.js"></script>
 
@@ -17,7 +57,9 @@
 <h2>Reset Min CSS</h2>
 <script src="https://gist.github.com/estefanions/fbbeae1a0e1966826342.js"></script>
 </div>
+    
 
+</div>
 
 
 <script>
