--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 </a>
 </li>
     <li>
- <div class="share-opt">
-<a class="twitter-share-button"
+<a class="twitter-share-button btn_info"
                href="https://twitter.com/share"
                data-count="none"
                data-size="large"
@@ -28,18 +27,15 @@
                data-via="estefanions"
                data-related="estefanions">Tweet</a>
 
-          </div>
 
 </li>
 
 
 <li>
- <div class="share-opt">
-            <a class="twitter-follow-button"
+            <a class="twitter-follow-button btn_info"
                href="https://twitter.com/estefanions"
                data-show-count="false"
                data-size="large">@estefanions</a>
-          </div>
 
 </li>
 
