--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <ul class="list_horizontal align_right">
 <li>
-<a href="https://github.com/estefanions/resetcss" target="_blank">
+<a href="https://github.com/estefanions/resetcss" class="btn_info" target="_blank">
 <img src="image/github_logo.png" width="20" alt="github"/>
 </a>
 </li>
