--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <ul class="list_horizontal align_right">
 <li>
-<a href="https://github.com/estefanions/resetcss" class="btn_info" target="_blank">
+<a href="https://github.com/estefanions/resetcss" target="_blank">
 <img src="image/github_logo.png" width="20" alt="github"/>
 </a>
 </li>
     <li>
-<a class="twitter-share-button btn_info"
+<a class="twitter-share-button text_info"
                href="https://twitter.com/share"
                data-count="none"
                data-size="large"
@@ -32,7 +32,7 @@
 
 
 <li>
-            <a class="twitter-follow-button btn_info"
+            <a class="twitter-follow-button text_info"
                href="https://twitter.com/estefanions"
                data-show-count="false"
                data-size="large">@estefanions</a>
